# manga-image-translator-rust-gui

./: .gitignore  .gitmodules  AGENT.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_GUIDE.md  NOTICE  README.md  fonts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/: cargo.yml  python-build.yml  setup-linux.yml  setup-python.yml  setup-rust.yml  setup-windows.yml
.github/actions/cargo/: action.yml
.github/actions/python-build/: action.yml
.github/actions/setup-linux/: action.yml
.github/actions/setup-macos/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/setup-windows/: action.yml
.github/workflows/: build-and-publish.yml  pull.yml  push.yml  release.yml  web.yml
crates/base-util/: Cargo.toml
crates/base-util/src/: error.rs  lib.rs  ndarray_utils.rs  onnx.rs  opencv_utils.rs
crates/densecrf/: Cargo.toml  build.rs
crates/densecrf/cpp/: wrapper.cpp
crates/densecrf/src/: lib.rs
crates/interface/: Cargo.toml
crates/interface/benches/: border_bench.rs  border_center_bench.rs  gamma_correction_bench.rs  histogram_equalization_bench.rs  invert_bench.rs  remove_border_mask_bench.rs  resize_bench.rs  resize_mask_bench.rs  rotate_bench.rs  rotate_left_mask_bench.rs  textlines_bench.rs
crates/interface/detector/: Cargo.toml
crates/interface/detector/src/: common.rs  lib.rs  mod.rs  textlines.rs
crates/interface/image/: Cargo.toml
crates/interface/image/benches/: resize_bench.rs  resize_mask_bench.rs
crates/interface/image/src/: cpu.rs  dummy.rs  froms.rs  lib.rs  rayon.rs
crates/interface/inpainter/: Cargo.toml
crates/interface/inpainter/src/: lib.rs
crates/interface/model/: Cargo.toml
crates/interface/model/src/: db.rs  lib.rs
crates/interface/ocr/: Cargo.toml
crates/interface/ocr/src/: lib.rs
crates/interface/src/detectors/: mod.rs  textlines.rs
crates/interface/src/image/: cpu.rs  dummy.rs  froms.rs  mod.rs  rayon.rs
crates/interface/src/model/: mod.rs
crates/interface/src/models/: mod.rs
crates/interface/src/translator/: mod.rs
crates/interface/translator/: Cargo.toml  build.rs
crates/interface/translator/src/: lib.rs
crates/interface/upscaler/: Cargo.toml
crates/interface/upscaler/src/: lib.rs
crates/kumiko/src/: panel.rs
crates/mask-refinement/: Cargo.toml
crates/mask-refinement/src/: bubble.rs  expand.rs  fill_text.rs  lib.rs
crates/modules/craft/: Cargo.toml
crates/modules/ctd/: Cargo.toml
crates/modules/dbnet/: Cargo.toml
crates/modules/dbnet/benches/: onnx_bench.rs
crates/modules/dbnet/src/: lib.rs  main.rs
crates/modules/detector/ctd/: Cargo.toml
crates/modules/detector/ctd/src/: lib.rs  refine_mask.rs
crates/modules/detector/dbnet/: Cargo.toml
crates/modules/detector/none/: Cargo.toml
crates/modules/detector/paddle/: Cargo.toml
crates/modules/detector/paddle/benches/: generate_mask_bench.rs  onnx_bench.rs
crates/modules/detector/paddle/src/: lib.rs
crates/modules/inpainter/color/: Cargo.toml
crates/modules/inpainter/color/src/: lib.rs
crates/modules/inpainter/lama_aot/: Cargo.toml
crates/modules/inpainter/lama_large/: Cargo.toml  mask.npy
crates/modules/inpainter/lama_mpe/: Cargo.toml
crates/modules/inpainter/lama_mpe/src/: lib.rs  mpe.rs
crates/modules/none/: Cargo.toml
crates/modules/none/benches/: onnx_bench.rs
crates/modules/ocr/ctc-48px/: Cargo.toml
crates/modules/ocr/manga-ocr/: Cargo.toml
crates/modules/ocr/manga-ocr/src/: lib.rs
crates/modules/ocr/native/: Cargo.toml
crates/modules/ocr/ocr-48px/: Cargo.toml
crates/modules/paddle/: Cargo.toml
crates/modules/paddle/src/: lib.rs
crates/modules/python-module/: Cargo.toml
crates/modules/upscaler/waifu2x/: Cargo.toml
crates/modules/upscaler/waifu2x/src/: lib.rs
crates/py-bindings/: Cargo.toml  README.md  pyproject.toml
crates/py-bindings/src/: lib.rs
crates/runtimes/simple-runtime/: Cargo.toml
crates/runtimes/simple-runtime/debug/ec0d267f-bc1e-42f1-ab3c-3c57646d3693/: 0_config.json  1_quadrilateral.json  2_quadrilateral.json  3_textblock.json  4_textblocks_translated.json
crates/runtimes/simple-runtime/src/: api.rs  cache.rs  cli.rs  debug.rs  diagnostics.rs  dict.rs  execute.rs  gpu_runtime.rs  main.rs  perf.rs  proxy.rs  settings.rs  update.rs  webview_ui.rs
crates/runtimes/simple-runtime/src/debug/: bbox.rs  mod.rs  textblocks.rs
crates/runtimes/simple-runtime/src/execute/: detector.rs  dict.rs  inpainter.rs  mask_refinement.rs  mod.rs  ocr.rs  textline_merge.rs  translator.rs  upscaler.rs
crates/runtimes/simple-runtime/src/settings/: detector.rs  inpainter.rs  mask_refinement.rs  mod.rs  ocr.rs  render.rs  translator.rs  upscaler.rs
crates/runtimes/simple-runtime/src/setup/: detector.rs  inpainter.rs  mod.rs  models_catalog.rs  ocr.rs  translator.rs  upscaler.rs
crates/runtimes/simple-runtime/src/ui/: main.rs  mod.rs
crates/runtimes/simple-runtime/webview/: app.js  index.html  styles.css
crates/textline-merge/: Cargo.toml
crates/textline-merge/src/: lib.rs
crates/util/: Cargo.toml
crates/util/benches/: det_arange_bench.rs  imageproc_bench.rs
crates/util/src/: dbnet.rs  det_arrange.rs  imageproc.rs  lama.rs  lib.rs  ocr.rs  opencv.rs  resize.rs  text_direction.rs
docs/: BINARY_EXPORT_DATA_STRUCURE.md  BUILD.md  MODULES.md  ROADMAP.md  USAGE.md  book.toml  example.json  gui-redesign-plan.md  optimization-showcase.html  performance-optimization.md  performance-tracking.md  release-portable-v0.1.0.md  release-portable-v1.0.0.md  schema.json
docs/src/: SUMMARY.md  cpp-deps.md  index.md  installation.md  modules.md  python-renderer.md  quick-start.md  usage.md
docs/src/dev/: binary-format.md  build.md  cpp-deps.md  deploy.md
docs/src/modules/: detectors.md  inpainter.md  inpainters.md  ocrs.md  translators.md  upscaler.md  upscalers.md
example/: add_metadata_to_onnx.py  convert_paddleocr.sh  example.json  python-lib.py  schema.json
scripts/: .gitignore  arch-install.sh  bundle-macos.sh  convert_dbnet_model.py  load.py  package-windows-portable.ps1  python-render.py
(+31 files in other folders)
