[package]
name = "rusty-manga-image-translator"
version.workspace = true
edition.workspace = true

[dependencies]
interface.workspace = true
pyo3 = { version = "0.25.1", features = ["extension-module"] }
numpy = "0.25.0"
dbnet.workspace = true
base-util.workspace = true

[lib]
name = "rusty_manga_image_translator"
crate-type = ["cdylib"]
