[project]
name = "rusty-manga-image-translator"
version = "0.2.2"
description = "Rust implementation of manga-image-translator with py-bindings"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Frederik", email = "termite_pilgrim04@icloud.com" }]
keywords = ["manga", "image-processing", "rust", "python", "translator"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/frederik-uni/manga-image-translator-rust"

[tool.maturin]
module-name = "rusty_manga_image_translator"
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
