[package]
name = "textline-merge"
version.workspace = true
edition.workspace = true

[dependencies]
util.workspace = true
interface-detector.workspace = true
interface-ocr.workspace = true
itertools.workspace = true
petgraph.workspace = true
ordered-float.workspace = true
log.workspace = true
once_cell.workspace = true
interface-translator.workspace = true
geo.workspace = true
