[package]
name = "simple-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "color"] }
walkdir.workspace = true
config = { workspace = true, features = [
    "json",
    "json5",
    "ini",
    "ron",
    "toml",
    "yaml",
] }
serde = { workspace = true, features = ["derive"] }
opencv = { workspace = true, features = ["imgproc"] }
interface-detector.workspace = true
interface-upscaler.workspace = true
interface-inpainter.workspace = true
interface-image.workspace = true
interface-ocr.workspace = true
interface-translator.workspace = true
interface-model.workspace = true
log.workspace = true
semver.workspace = true
ctc-48px.workspace = true
native.workspace = true
parking_lot.workspace = true
tesseract.workspace = true
schemars.workspace = true
ocr-48px.workspace = true
html.workspace = true
ort = { workspace = true }
async-scoped = { workspace = true, features = ["use-tokio"] }
util.workspace = true

strum = "0.27.2"
strum_macros = "0.27.2"
base-util.workspace = true
regex.workspace = true
waifu2x.workspace = true
esrgan.workspace = true
anime4k.workspace = true
dbnet.workspace = true
ctd.workspace = true
paddle.workspace = true
lama_aot.workspace = true
lama_large.workspace = true
lama_mpe.workspace = true
manga-ocr.workspace = true
image.workspace = true
textline-merge.workspace = true
imageproc.workspace = true
ab_glyph.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
env_logger.workspace = true
mask-refinement.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["v4"] }
export.workspace = true
png.workspace = true
reqwest = { workspace = true, features = ["json"] }
anyhow.workspace = true
tracing-subscriber= { workspace = true, features = ["env-filter"] }
tracing.workspace = true
rfd = "0.15.4"
tao = "0.35.3"
wry = { version = "0.55.1", features = ["protocol"] }

[features]
cuda = ["ort/cuda"]
coreml = ["ort/coreml"]
tensorrt = ["ort/tensorrt"]
rocm = ["ort/rocm"]
