[package]
name = "ctd"
version.workspace = true
edition.workspace = true

[dependencies]
interface = { workspace = true, features = ["debug"] }
ndarray.workspace = true
ort.workspace = true
base-util.workspace = true
anyhow.workspace = true
util.workspace = true
maplit.workspace = true
roots.workspace = true
imageproc.workspace = true
