[package]
name = "paddle"
version.workspace = true
edition.workspace = true

[dependencies]
interface-model.workspace = true
interface-detector.workspace = true
interface-image.workspace = true

base-util.workspace = true
paddle-ocr-rs = { git = "https://github.com/frederik-uni/paddle-ocr-rs.git", branch = "more-public" }
parking_lot.workspace = true
ort.workspace = true
anyhow.workspace = true
maplit.workspace = true
geo.workspace = true
async-trait.workspace = true
ort-parallel.workspace = true

[dev-dependencies]
criterion = "0.6.0"
rand.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
[[bench]]
name = "generate_mask_bench"
harness = false

[[bench]]
name = "onnx_bench"
harness = false
