[package]
name = "manga-ocr"
version.workspace = true
edition.workspace = true

[dependencies]
interface-model.workspace = true
interface-ocr.workspace = true
interface-detector.workspace = true
interface-image.workspace = true
ndarray.workspace = true
ort.workspace = true
base-util.workspace = true
anyhow.workspace = true
maplit.workspace = true
image.workspace = true
